<?xml version="1.0"?>
<package format="3">
  <name>apriltag_msgs</name>
  <version>3.1.1</version>
  <description>
    ROS mag and srv for AprilTag 3 visual fiducial detection
    algorithm.
  </description>

  <maintainer email="danylo.malyuta@gmail.com">Danylo Malyuta</maintainer>
  <maintainer email="w.merkt+oss@gmail.com">Wolfgang Merkt</maintainer>

  <author>Danylo Malyuta</author>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/apriltag_ros</url>
  <url type="bugtracker">https://github.com/AprilRobotics/apriltag_ros/issues</url>
  <url type="repository">https://github.com/AprilRobotics/apriltag_ros</url>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
