<?xml version="1.0"?>
<package format="3">
  <name>apriltag_ros</name>
  <version>3.1.1</version>
  <description>
    A ROS wrapper of the AprilTag 3 visual fiducial detection
    algorithm. Provides full access to the core AprilTag 3 algorithm's
    customizations and makes the tag detection image and detected tags' poses
    available over ROS topics (including tf). The core AprilTag 3 algorithm is
    extended to allow the detection of tag bundles and a bundle calibration
    script is provided (bundle detection is more accurate than single tag
    detection). Continuous (camera image stream) and single image detector nodes
    are available.
  </description>

  <maintainer email="danylo.malyuta@gmail.com">Danylo Malyuta</maintainer>
  <maintainer email="w.merkt+oss@gmail.com">Wolfgang Merkt</maintainer>

  <author>Danylo Malyuta</author>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/apriltag_ros</url>
  <url type="bugtracker">https://github.com/AprilRobotics/apriltag_ros/issues</url>
  <url type="repository">https://github.com/AprilRobotics/apriltag_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>apriltag</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>apriltag_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libopencv-dev</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>apriltag</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>apriltag_msgs</exec_depend> 
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>